--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "discord",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./dist/index",
+  "types": "./dist/index",
   "scripts": {
     "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
     "deploy": "ts-node src/index.ts deploy",
     "start": "ts-node src/index.ts",
+    "build": "tsc -p tsconfig.json",
     "dev": "ts-node-dev --watch src/**/*.ts src/index.ts"
   },
   "repository": {
