--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2020",
+        "target": "ESNext",
         "module": "commonjs",
-        "lib": ["es2021"],
         "declaration": true,
         "sourceMap": true,
         "outDir": "./dist",
